Fixed spacing and box sizes on Resources (6/10)

--- a/static/styles/resources.css
+++ b/static/styles/resources.css
@@ -1,151 +1,152 @@
 h1 {
-    position: relative;
-    padding: 0;
-    margin: 0;
-    font-family: "Raleway", sans-serif;
-    font-weight: 300;
-    font-size: 40px;
-    color: #080808;
-    -webkit-transition: all 0.4s ease 0s;
-    -o-transition: all 0.4s ease 0s;
-    transition: all 0.4s ease 0s;
-  }
-  
-  h1 span {
-    display: block;
-    font-size: 0.5em;
-    line-height: 1.3;
-  }
-  h1 em {
-    font-style: normal;
-    font-weight: 600;
-  }
+  position: relative;
+  padding: 0;
+  margin: 0;
+  font-family: "Raleway", sans-serif;
+  font-weight: 300;
+  font-size: 40px;
+  color: #080808;
+  -webkit-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s;
+}
+
+h1 span {
+  display: block;
+  font-size: 0.5em;
+  line-height: 1.3;
+}
+h1 em {
+  font-style: normal;
+  font-weight: 600;
+}
 
 .cat-title h1 {
-    text-transform: capitalize;
-  }
-  .cat-title h1:before {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 60px;
-    height: 2px;
-    content: "";
-    background-color: #c50000;
-  }
-  
-  .cat-title h1 span {
-    font-size: 13px;
-    font-weight: 500;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    line-height: 3em;
-    padding-left: 0.25em;
-    color: rgba(0, 0, 0, 0.4);
-    padding-bottom: 10px;
-  }
-  .title-alt h1 {
-    text-align:center;
-  }
-  .title-alt h1:before {
-    left:50%; margin-left:-30px;
-  }
+  text-transform: capitalize;
+}
+.cat-title h1:before {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 60px;
+  height: 2px;
+  content: "";
+  background-color: #c50000;
+}
+
+.cat-title h1 span {
+  font-size: 13px;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  line-height: 3em;
+  padding-left: 0.25em;
+  color: rgba(0, 0, 0, 0.4);
+  padding-bottom: 10px;
+}
+.title-alt h1 {
+  text-align:center;
+}
+.title-alt h1:before {
+  left:50%; margin-left:-30px;
+}
 
 .web-card {
-    display: inline-block;
-    padding-left: 25px;
+  display: inline-block;
+  padding-left: 25px;
   padding-right: 25px;
   flex: 0 0 25%;
-    max-width: 25%;
-    text-decoration: none;
-    overflow:hidden;
-    margin-bottom: 20px;
-    border: 3px solid #ff6500;
-    border-radius: 25px;
-    transition:  0.4s;
+  max-width: 25%;
+  height: 400px;
+  text-decoration: none;
+  overflow:hidden;
+  margin-bottom: 25px;
+  margin-left: 50px;
+  border: 3px solid #ff6500;
+  border-radius: 25px;
+  transition:  0.4s;
 }
 
 .web-card a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .web-card:hover{
-    transform: translate(0, -10px);
-    box-shadow: 2px 10px;
+  transform: translate(0, -10px);
+  box-shadow: 2px 10px;
 }
 
 .web-card-img {
-    padding-top: 30px;
-    border-bottom-left-radius: calc(.25rem - 1px);
-  border-bottom-right-radius: calc(.25rem - 1px);
-  width: 100%;
-  border-top-left-radius: calc(.25rem - 1px);
-  border-top-right-radius: calc(.25rem - 1px);
+padding-top: 30px;
+border-bottom-left-radius: calc(.25rem - 1px);
+border-bottom-right-radius: calc(.25rem - 1px);
+width: 100%;
+border-top-left-radius: calc(.25rem - 1px);
+border-top-right-radius: calc(.25rem - 1px);
 }
 
 .web-card-tag {
-  background: transparent;
-  font-size: 79%;
-  margin-bottom: 10px;
-  padding-left: 0;
-  padding-right: 0;
-  text-transform: uppercase;
-  border-radius: 50px;
-  font-weight: 500;
-  letter-spacing: .3px;
-  vertical-align: middle;
-  display: inline-block;
-  text-align: center;
-  line-height: 1;
-  white-space: nowrap;
-  color: #ff6500
+background: transparent;
+font-size: 79%;
+margin-bottom: 10px;
+padding-left: 0;
+padding-right: 0;
+text-transform: uppercase;
+border-radius: 50px;
+font-weight: 500;
+letter-spacing: .3px;
+vertical-align: middle;
+display: inline-block;
+text-align: center;
+line-height: 1;
+white-space: nowrap;
+color: #ff6500
 }
 
 .web-card-title {
-    color: #600015;
-    text-decoration: none;
-    line-height: 1;
+  color: #600015;
+  text-decoration: none;
+  line-height: 1;
 }
 
 .web-card-desc {
-    text-decoration: none;
-    color: black;
-    line-height: 1;
-    padding-bottom: 30px;
+  text-decoration: none;
+  color: black;
+  line-height: 1;
+  padding-bottom: 30px;
 }
 
 .alumni-card {
-    background-color: lightgray;
-    overflow:hidden;
-    width: 70%;
-    border-radius: 25px;
-    transition:  0.4s;
+  background-color: lightgray;
+  overflow:hidden;
+  width: 70%;
+  border-radius: 25px;
+  transition:  0.4s;
 
 }
 
 .alumni-card:hover{
-    transform: translate(0, -10px);
-    box-shadow: 2px 10px;
+  transform: translate(0, -10px);
+  box-shadow: 2px 10px;
 }
 
 .alumni-card a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .alumni-card-img {
-    max-height:100%;
-    width: auto;
+  max-height:100%;
+  width: auto;
 }
 
 .alumni-card-desc {
-    text-decoration: none;
-    color: black;
-    line-height: 2;
+  text-decoration: none;
+  color: black;
+  line-height: 2;
 }
 
 .alumni-card-title {
-    color: #ff6500;
-    vertical-align: middle;
-    display: inline-block;
-
+  color: #ff6500;
+  vertical-align: middle;
+  display: inline-block;
 }
